[package]
name = "an-gatherers"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "an-gatherers"
path = "src/main.rs"

[lib]
name = "an_gatherers"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0", features = ["from"] }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
log = "0.4"

#[dependencies.web-sys]
#version = "0.3"
#features = [
#    "GpuCanvasContext",
#    "GpuUncapturedErrorEvent",
#    "GpuRenderBundle",
#    "GpuRenderBundleEncoder",
#    "GpuCommandBuffer",
#    "GpuRenderPassEncoder",
#    "GpuComputePassEncoder",
#    "GpuTexture",
#    "GpuBuffer",
#    "GpuSampler",
#    "GpuTextureView",
#    "GpuBindGroup",
#    "GpuBindGroupLayout",
#    "GpuShaderModule",
#    "GpuQueue",
#    "GpuDevice",
#    "GpuAdapter",
#    "GpuFeatureName"
#]

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
  "default_app",        # Core app infrastructure (logging, diagnostics, etc.)
  "default_platform",   # Platform support (windowing, keyboard, mouse)
  "2d_api",             # 2D types (Sprite, Camera2d, etc.)
  "2d_bevy_render",     # 2D rendering backend
  "ui",                 # Bevy UI (nodes, text, layout)
  "webgl2",             # WebGL2 for broad WASM browser support
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
#from https://sycamore-rs.netlify.app/docs/v0.8/advanced/optimize_wasm_size
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
