[package]
name = "an-gatherers"
version = "0.1.4"
edition = "2024"

[[bin]]
name = "an-gatherers"
path = "src/main.rs"

[lib]
name = "an_gatherers"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0", features = ["from"] }
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
log = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ewebsock = "0.8.0"

#[dependencies.web-sys]
#version = "0.3"
#features = [
#    "GpuCanvasContext",
#    "GpuUncapturedErrorEvent",
#    "GpuRenderBundle",
#    "GpuRenderBundleEncoder",
#    "GpuCommandBuffer",
#    "GpuRenderPassEncoder",
#    "GpuComputePassEncoder",
#    "GpuTexture",
#    "GpuBuffer",
#    "GpuSampler",
#    "GpuTextureView",
#    "GpuBindGroup",
#    "GpuBindGroupLayout",
#    "GpuShaderModule",
#    "GpuQueue",
#    "GpuDevice",
#    "GpuAdapter",
#    "GpuFeatureName"
#]

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
  "bevy_winit",         # Windowing backend
  "bevy_log",           # Log subscriber (crate compiles anyway; enables LogPlugin in DefaultPlugins)
  "default_font",       # Built-in font for text rendering
  "bevy_ui_render",     # UI + sprite + render + camera + text (full transitive chain)
  "webgl2",             # WebGL2 for broad WASM browser support
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
