[package]
name = "gatherers-backend-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "gatherers_backend_rust"
path = "src/lib.rs"

[[bin]]
name = "gatherers-backend-rust"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
