[package]
name = "gatherers-backend-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "gatherers_backend_rust"
path = "src/lib.rs"

[[bin]]
name = "gatherers-backend-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
